prepared the single ep deployment relyin only on proxy

--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -19,10 +19,34 @@ http {
     server acmeair-bookingservice-springboot:9082;
     keepalive 100;
   }
-  upstream customerservices {
+  
+  ##############ENDPOINT DEL MICROSERVIZIO customerservice
+  #richieste per recuperare le informazioni dell'utente
+  upstream customerservices_byid_GET {
     server acmeair-customerservice-springboot:9083;
     keepalive 100;
   }
+  
+  #richieste per modificare le informazioni dell'utente
+  upstream customerservices_byid_POST {
+    server acmeair-customerservice-springboot:9083;
+    keepalive 100;
+  }
+  
+  #richieste per validare le informazioni dell'utente
+  upstream customerservices_validateid {
+    server acmeair-customerservice-springboot:9083;
+    keepalive 100;
+  }
+  
+  #richieste per aggiornare le rewards miles
+  upstream customerservices_updateCustomerTotalMiles{
+    server acmeair-customerservice-springboot:9083;
+    keepalive 100;
+  }
+  ##############
+  
+  
   upstream flightservices {
     server acmeair-flightservice-springboot:9084;
     keepalive 100;
@@ -43,18 +67,33 @@ http {
       proxy_set_header Connection "";
  
     }
-
+    
+    
     location /booking/ {
       proxy_pass http://bookingservices/;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
-
-    location /customer/ {
-      proxy_pass http://customerservices/;
+	
+	#####
+    location /customer/byid {
+      proxy_pass http://customerservices_byid_$request_method/;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
+    
+    location /customer/validateid {
+      proxy_pass http://customerservices_validateid/;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+    }
+    
+    location /customer/updateCustomerTotalMiles {
+      proxy_pass http://customerservices_updateCustomerTotalMiles/;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+    }
+    #####
 
     location /flight/ {
       proxy_pass http://flightservices/;
