migrating to single-ep

--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -15,42 +15,69 @@ http {
     server acmeair-authservice-springboot:9081;
     keepalive 100;
   }
-  upstream bookingservices {
+  
+  ##############ENDPOINT DEL MICROSERVIZIO bookingservices
+  
+  
+  upstream bookingservicesbookflights {
     server acmeair-bookingservice-springboot:9082;
     keepalive 100;
   }
   
+  upstream bookingservicesbybookingnumber {
+    server acmeair-bookingservice-springboot:9083;
+    keepalive 100;
+  }
+  
+  upstream bookingservicesbyuser {
+    server acmeair-bookingservice-springboot:9084;
+    keepalive 100;
+  }
+  
+  upstream bookingservicescancelbooking {
+    server acmeair-bookingservice-springboot:9085;
+    keepalive 100;
+  }
+  
+  ########
+  
   ##############ENDPOINT DEL MICROSERVIZIO customerservice
-  #richieste per recuperare le informazioni dell'utente
-  upstream customerservices_byid_GET {
-    server acmeair-customerservice-springboot:9083;
+  upstream customerservicesbyidGET {
+    server acmeair-customerservice-springboot:9086;
     keepalive 100;
   }
   
   #richieste per modificare le informazioni dell'utente
-  upstream customerservices_byid_POST {
-    server acmeair-customerservice-springboot:9083;
+  upstream customerservicesbyidPOST {
+    server acmeair-customerservice-springboot:9087;
     keepalive 100;
   }
   
   #richieste per validare le informazioni dell'utente
-  upstream customerservices_validateid {
-    server acmeair-customerservice-springboot:9083;
+  upstream customerservicesvalidateid {
+    server acmeair-customerservice-springboot:9088;
     keepalive 100;
   }
   
   #richieste per aggiornare le rewards miles
-  upstream customerservices_updateCustomerTotalMiles{
-    server acmeair-customerservice-springboot:9083;
+  upstream customerservicesupdateCustomerTotalMiles{
+    server acmeair-customerservice-springboot:9089;
     keepalive 100;
   }
   ##############
   
-  
-  upstream flightservices {
-    server acmeair-flightservice-springboot:9084;
+  ##############ENDPOINT DEL MICROSERVIZIO flightservices
+  upstream flightservicesqueryflights {
+    server acmeair-flightservice-springboot:9090;
     keepalive 100;
   }
+  
+  upstream flightservicesgetrewardmiles {
+    server acmeair-flightservice-springboot:9091;
+    keepalive 100;
+  }
+  
+  ####
 
   server {
     listen 80;
@@ -68,37 +95,82 @@ http {
  
     }
     
+    #####
     
     location /booking/ {
-      proxy_pass http://bookingservices/;
+      proxy_pass http://bookingservicesbookflights/;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+    }
+    
+    location /booking/bookflights {
+      proxy_pass http://bookingservicesbookflights/;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+    }
+    
+    location /booking/bybookingnumber {
+      proxy_pass http://bookingservicesbybookingnumber/;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+    }
+    
+    location /booking/byuser {
+      proxy_pass http://bookingservicesbyuser/;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+    }
+    
+    location /booking/cancelbooking {
+      proxy_pass http://bookingservicescancelbooking/;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+    }
+    #####
+  	
+  	location /customer/ {
+      proxy_pass http://customerservicesvalidateid/;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
 	
 	#####
     location /customer/byid {
-      proxy_pass http://customerservices_byid_$request_method/;
+      proxy_pass http://customerservicesbyid$request_method/;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
     
     location /customer/validateid {
-      proxy_pass http://customerservices_validateid/;
+      proxy_pass http://customerservicesvalidateid/;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
     
     location /customer/updateCustomerTotalMiles {
-      proxy_pass http://customerservices_updateCustomerTotalMiles/;
+      proxy_pass http://customerservicesupdateCustomerTotalMiles/;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
     #####
-
-    location /flight/ {
-      proxy_pass http://flightservices/;
+    
+    location /flight {
+      proxy_pass http://flightservicesqueryflights/;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
+
+    location /flight/queryflights {
+      proxy_pass http://flightservicesqueryflights/;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+    }
+    
+    location /flight/getrewardmiles {
+      proxy_pass http://flightservicesgetrewardmiles/;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+    }
+    
   }
 }
