--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -6,6 +6,10 @@ events {
 }
 
 http {
+	
+  error_log /var/log/nginx/error.log;
+  access_log /var/log/nginx/access.log;
+
   upstream mainservices {
     server acmeair-mainservice-springboot:9080;
     keepalive 100;
@@ -16,68 +20,32 @@ http {
     keepalive 100;
   }
   
-  ##############ENDPOINT DEL MICROSERVIZIO bookingservices
-  
-  
-  upstream bookingservicesbookflights {
+  upstream bookingservices {
     server acmeair-bookingservice-springboot:9082;
     keepalive 100;
   }
   
-  upstream bookingservicesbybookingnumber {
-    server acmeair-bookingservice-springboot:9083;
-    keepalive 100;
-  }
-  
-  upstream bookingservicesbyuser {
-    server acmeair-bookingservice-springboot:9084;
-    keepalive 100;
-  }
-  
-  upstream bookingservicescancelbooking {
-    server acmeair-bookingservice-springboot:9085;
-    keepalive 100;
-  }
-  
-  ########
-  
-  ##############ENDPOINT DEL MICROSERVIZIO customerservice
-  upstream customerservicesbyidGET {
+  upstream customerservices {
     server acmeair-customerservice-springboot:9086;
     keepalive 100;
   }
   
-  #richieste per modificare le informazioni dell'utente
-  upstream customerservicesbyidPOST {
-    server acmeair-customerservice-springboot:9087;
-    keepalive 100;
-  }
-  
-  #richieste per validare le informazioni dell'utente
-  upstream customerservicesvalidateid {
-    server acmeair-customerservice-springboot:9088;
-    keepalive 100;
-  }
-  
-  #richieste per aggiornare le rewards miles
-  upstream customerservicesupdateCustomerTotalMiles{
-    server acmeair-customerservice-springboot:9089;
-    keepalive 100;
-  }
-  ##############
-  
-  ##############ENDPOINT DEL MICROSERVIZIO flightservices
-  upstream flightservicesqueryflights {
+  upstream flightservices {
     server acmeair-flightservice-springboot:9090;
     keepalive 100;
   }
   
-  upstream flightservicesgetrewardmiles {
-    server acmeair-flightservice-springboot:9091;
+  
+  upstream customerservicesvalidate {
+    server acmeair-customerservice-springboot:9086;
     keepalive 100;
   }
   
-  ####
+  map $request_method $customerservicesbyid{
+   POST   localhost:9087/byid;
+   GET    localhost:9088/byid;
+   default localhost:9086/byid;
+  }
 
   server {
     listen 80;
@@ -92,85 +60,39 @@ http {
       proxy_pass http://authservices/;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
- 
+
     }
-    
-    #####
-    
+
     location /booking/ {
-      proxy_pass http://bookingservicesbookflights/;
+      proxy_pass http://bookingservices/;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
-    
-    location /booking/bookflights {
-      proxy_pass http://bookingservicesbookflights/;
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-    }
-    
-    location /booking/bybookingnumber {
-      proxy_pass http://bookingservicesbybookingnumber/;
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-    }
-    
-    location /booking/byuser {
-      proxy_pass http://bookingservicesbyuser/;
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-    }
-    
-    location /booking/cancelbooking {
-      proxy_pass http://bookingservicescancelbooking/;
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-    }
-    #####
-  	
-  	location /customer/ {
-      proxy_pass http://customerservicesvalidateid/;
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-    }
-	
-	#####
-    location /customer/byid {
-      proxy_pass http://customerservicesbyid$request_method/;
+
+    location /customer/ {
+      proxy_pass http://customerservices/;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
     
     location /customer/validateid {
-      proxy_pass http://customerservicesvalidateid/;
+      proxy_pass http://customerservicesvalidate/validateid;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
     
-    location /customer/updateCustomerTotalMiles {
-      proxy_pass http://customerservicesupdateCustomerTotalMiles/;
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-    }
-    #####
-    
-    location /flight {
-      proxy_pass http://flightservicesqueryflights/;
+    location /customer/byid/ {
+      resolver localhost;
+      
+      proxy_pass http://$customerservicesbyid;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
 
-    location /flight/queryflights {
-      proxy_pass http://flightservicesqueryflights/;
+    location /flight/ {
+      proxy_pass http://flightservices/;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
-    
-    location /flight/getrewardmiles {
-      proxy_pass http://flightservicesgetrewardmiles/;
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-    }
-    
   }
 }
