--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -8,24 +8,49 @@ defaults
 frontend myfrontend
   bind :80
   use_backend mainservices if { path_beg /acmeair/ }
-  use_backend authservices if { path_beg /auth/ }
   use_backend bookingservices if { path_beg /booking/ }
+  use_backend customerservices if { path_beg /customer/ }
+  use_backend flightservices if { path_beg /flight/ }
+  use_backend authservices if { path_beg /auth/ }
+  
+  use_backend bookingservicesbookflights if { path_beg /booking/bookflights }
+  use_backend bookingservicesbybookingnumber if { path_beg /booking/bybookingnumber }
+  use_backend bookingservicesbyuser if { path_beg /booking/byuser }
+  use_backend bookingservicescancelbooking if { path_beg /booking/cancelbooking }
+  
   
   use_backend customerservicesvalidate if { path_beg /customer/validateid }
   use_backend customerservicesbyidGET if { path_beg /customer/byid } { method GET }
   use_backend customerservicesbyidPOST if { path_beg /customer/byid } { method POST }
-  #use_backend customerservices if { path_beg /customer/ }
+  use_backend customerservicesupdateMiles if { path_beg /customer/updateCustomerTotalMiles }
   
-  use_backend flightservices if { path_beg /flight/ }
+  use_backend flightservicesqueryflights if { path_beg /flight/queryflights }
+  use_backend flightservicesgetrewardmiles if { path_beg /flight/getrewardmiles }
+  
+  
 
 backend mainservices
   http-request set-path "%[path,regsub(^/acmeair/,/)]"
   server mainserver acmeair-mainservice-springboot:9080
 
+
 backend authservices
   http-request set-path "%[path,regsub(^/auth/,/)]"
   server authserver acmeair-authservice-springboot:9081
   
+  
+backend bookingservicesbookflights
+  http-request set-path "%[path,regsub(^/booking/,/)]"
+  server bookingserver acmeair-bookingservice-springboot:9082
+backend bookingservicesbybookingnumber
+  http-request set-path "%[path,regsub(^/booking/,/)]"
+  server bookingserver acmeair-bookingservice-springboot:9083
+backend bookingservicesbyuser
+  http-request set-path "%[path,regsub(^/booking/,/)]"
+  server bookingserver acmeair-bookingservice-springboot:9084
+backend bookingservicescancelbooking
+  http-request set-path "%[path,regsub(^/booking/,/)]"
+  server bookingserver acmeair-bookingservice-springboot:9085
 backend bookingservices
   http-request set-path "%[path,regsub(^/booking/,/)]"
   server bookingserver acmeair-bookingservice-springboot:9082
@@ -43,8 +68,17 @@ backend customerservicesbyidGET
 backend customerservicesbyidPOST
   http-request set-path "%[path,regsub(^/customer/,/)]"
   server customerserver4 acmeair-customerservice-springboot:9088
+backend customerservicesupdateMiles
+  http-request set-path "%[path,regsub(^/customer/,/)]"
+  server customerserver4 acmeair-customerservice-springboot:9089
+  
 
-
+backend flightservicesqueryflights
+  http-request set-path "%[path,regsub(^/flight/,/)]"
+  server flightserver acmeair-flightservice-springboot:9090
+backend flightservicesgetrewardmiles
+  http-request set-path "%[path,regsub(^/flight/,/)]"
+  server flightserver acmeair-flightservice-springboot:9091
 backend flightservices
   http-request set-path "%[path,regsub(^/flight/,/)]"
   server flightserver acmeair-flightservice-springboot:9090
