--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -9,10 +9,10 @@ frontend myfrontend
   bind :3000
 
   use_backend mainservices if { path_beg /acmeair/ }
-  use_backend bookingservices if { path_beg /booking/ }
-  use_backend customerservices if { path_beg /customer/ }
-  use_backend flightservices if { path_beg /flight/ }
-  use_backend authservices if { path_beg /auth/ }
+  #use_backend bookingservices if { path_beg /booking/ }
+  #use_backend customerservices if { path_beg /customer/ }
+  #use_backend flightservices if { path_beg /flight/ }
+  #use_backend authservices if { path_beg /auth/ }
 
   use_backend bookingservicesbookflights if { path_beg /booking/bookflights }
   use_backend bookingservicesbybookingnumber if { path_beg /booking/bybookingnumber }
