--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -6,7 +6,7 @@ defaults
   timeout http-request 3000s
 
 frontend myfrontend
-  bind :3000
+  bind *:80
 
   use_backend mainservices if { path_beg /acmeair/ }
   #use_backend bookingservices if { path_beg /booking/ }
