--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -37,3 +37,22 @@ spec:
                   fieldPath: metadata.name
           ports:
             - containerPort: 80
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 5
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 0 # Immediate probes
+            periodSeconds: 20
+            timeoutSeconds: 5
+            successThreshold: 1
+            failureThreshold: 2
+          lifecycle:
+            preStop:
+              exec:
+                command: [ "pkill", "-15", "-f", "k8testpod" ]
